--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <div>
     <div class="row mt-5"></div>
     <div class="col"> 
-        <button type="button" class="btn btn-secondary">do</button>
+        <button type="button" class="btn do">do</button>
 <div>
 
 </div>
-<button type="button" class="btn btn-success">make</button>
+<button type="button" class="btn make">make</button>
     <div class="row mt-5">
         <div class="col">
-<button type="button" class="btn btn-danger">buttons</button>
+<button type="button" class="btn buttons">buttons</button>
     <div class="row mt-5">
         <div class="col">
 <button type="button" class="btn btn-warning">to</button>
