--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/styles.css">
     
@@ -29,16 +28,16 @@
 <button type="button" class="btn buttons">buttons</button>
     <div class="row mt-5">
         <div class="col">
-<button type="button" class="btn btn-warning">to</button>
+<button type="button" class="btn to">to</button>
     <div class="row mt-5">
         <div class="col">
-<button type="button" class="btn btn-info">press</button>
+<button type="button" class="btn press">press</button>
     <div class="row mt-5">
         <div class="col">
-<button type="button" class="btn btn-light">on</button>
+<button type="button" class="btn on">on</button>
     <div class="row mt-5">
         <div class="col">
-<button type="button" class="btn btn-dark">to</button>
+<button type="button" class="btn to2">to2</button>
     <div class="row mt-5">
         <div class="col">
 <button type="button" class="btn btn-link">them</button>
